 * NPE when trying to remove purgable tombstones from result (CASSANDRA-12143)
 * Improve streaming synchronization and fault tolerance (CASSANDRA-11414)
 * MemoryUtil.getShort() should return an unsigned short also for architectures not supporting unaligned memory accesses (CASSANDRA-11973)
 * Don't write shadowed range tombstone (CASSANDRA-12030)
Merged from 2.1:
 * Fix queries with empty ByteBuffer values in clustering column restrictions (CASSANDRA-12127)
 * Disable passing control to post-flush after flush failure to prevent data loss (CASSANDRA-11828)
 * Allow STCS-in-L0 compactions to reduce scope with LCS (CASSANDRA-12040)
 * cannot use cql since upgrading python to 2.7.11+ (CASSANDRA-11850)
 * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)
 * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
 * Account for partition deletions in tombstone histogram (CASSANDRA-12112)


2.2.7
 * Allow nodetool info to run with readonly JMX access (CASSANDRA-11755)
 * Validate bloom_filter_fp_chance against lowest supported
   value when the table is created (CASSANDRA-11920)
 * RandomAccessReader: call isEOF() only when rebuffering, not for every read operation (CASSANDRA-12013)
 * Don't send erroneous NEW_NODE notifications on restart (CASSANDRA-11038)
 * StorageService shutdown hook should use a volatile variable (CASSANDRA-11984)
 * Persist local metadata earlier in startup sequence (CASSANDRA-11742)
 * Run CommitLog tests with different compression settings (CASSANDRA-9039)
 * cqlsh: fix tab completion for case-sensitive identifiers (CASSANDRA-11664)
 * Avoid showing estimated key as -1 in tablestats (CASSANDRA-11587)
 * Fix possible race condition in CommitLog.recover (CASSANDRA-11743)
 * Enable client encryption in sstableloader with cli options (CASSANDRA-11708)
 * Possible memory leak in NIODataInputStream (CASSANDRA-11867)
 * Fix commit log replay after out-of-order flush completion (CASSANDRA-9669)